# artha_insights

./: .env.example  .gitignore  index.html  package-lock.json  package.json  requirements.txt  vercel.json
.github/workflows/: allocate.yml
api/: allocate.py
api/admin/: send-brief.js
api/cron/: allocate.py  brief.js  market.js  news.js
quant/: README.md  pyproject.toml  requirements.txt
quant/artha_quant/: __init__.py  confidence.py  config.py  data.py  hedge.py  ledger.py  meta_allocator.py  pipeline.py  regime.py  reliability.py  run.py  signals.py  store.py  strategies.py  synthetic.py  universe.py
quant/tests/: test_confidence.py  test_hedge.py  test_ledger.py  test_meta_allocator.py  test_reliability.py  test_strategies.py
src/: App.jsx
src/components/: AllocationPanel.jsx  Footer.jsx  Header.jsx  HeadlinesGrid.jsx  HomeHeadlines.jsx  Layout.jsx  PageWrap.jsx  PulseStrip.jsx  SceneIndex.jsx  Term.jsx
src/content/: briefs.js
src/lib/: adminGate.js  glossary.js  marketData.js  metaAllocator.js  profile.js  supabase.js
src/pages/: About.jsx  Allocator.jsx  Archive.jsx  BriefPage.jsx  Home.jsx  NotFound.jsx  Subscribe.jsx  Today.jsx  Welcome.jsx
src/styles/: global.css
supabase/: README.md  briefs_schema.sql  meta_schema.sql  schema.sql
